[tool.poetry]
name="st-df-table"
authors = ["Piotr Synowiec <psynowiec@gmail.com>"]
description = "Python data manipulation library"
version="0.0.4"
[tool.poetry.dependencies]
python = "^3.7"

[tool.flake8]
count = "true"
exclude = [
    ".git",
    ".dev",
    ".streamlit",
    "__pycache__",
    "venv",
    "var",
]
max-line-length = 120
line-length = 120

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | venv
  | var
  | dpt_env
  | dist
)/
'''